--- a/config/lovelace/views/07-alarm.yaml
+++ b/config/lovelace/views/07-alarm.yaml
@@ -1,15 +1,15 @@
 ---
 # Settings view
 
-- icon: mdi:settings
-  title: Settings
-  path: settings
+- icon: mdi:alarm
+  title: Alarm
+  path: alarm
   cards:
     - type: vertical-stack
       cards:
         - type: markdown
           content: |
-            ### Configuration
+            ### Alarm and sleep schedule
           style: |
             ha-card {
               height: 20px;
@@ -22,7 +22,7 @@
             }
         - type: markdown
           content: |
-            **Various settings for automations & co.**
+            **Various settings for alarm automations & co.**
           style: |
             ha-card {
               height: 50px;
@@ -123,63 +123,6 @@
               entities:
                 - entity: input_datetime.time_turnoff_devices
                   name: Turn-off time living room
-              style: |
-                ha-card {
-                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                  border-radius: 15px;
-                  box-shadow: var(--softui-standard-boxshadow);
-                }
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 60px
-        - type: markdown
-          content: |
-            **Vacuum automation**
-          style: |
-            ha-card {
-              height: 50px;
-              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-              box-shadow: 2px 2px rgba(0,0,0,0.0);
-              font-size: 14px;
-              font-weight: thin;
-              font-family: Helvetica;
-              letter-spacing: '-0.01em';
-            }
-        - type: horizontal-stack
-          cards:
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 60px
-            - type: entities
-              # title: Anderes
-              show_header_toggle: false
-              entities:
-                - type: custom:multiple-entity-row
-                  entity: input_datetime.vacuum_schedule_1_to
-                  name: Main schedule
-                  entities:
-                    - entity: input_datetime.vacuum_schedule_1_from
-                      name: false
-                - entity: input_boolean.vacuum_weekends
-                  name: Vacuum on weekends/holidays
               style: |
                 ha-card {
                   --ha-card-background: 'rgba(11, 11, 11, 0.00)';
