--- a/config/lovelace/views/01-home.yaml
+++ b/config/lovelace/views/01-home.yaml
@@ -812,7 +812,7 @@
             - type: custom:stack-in-card
               style: |
                 ha-card {
-                  height: 130px;
+                  height: 115px;
                   background-color: var(--primary-background-color);
                   border-radius: 15px;
                   box-shadow: var(--softui-standard-boxshadow);
@@ -842,7 +842,7 @@
                     - type: custom:button-card
                       color: auto
                       entity: vacuum.roborock
-                      size: 25%
+                      size: 30%
                       icon: mdi:play
                       show_name: false
                       styles:
@@ -850,13 +850,13 @@
                           - color: var(--primary-text-color)
                       tap_action:
                         action: call-service
-                        service: vacuum.turn_on
+                        service: vacuum.start
                         service_data:
                           entity_id: vacuum.roborock
                     - type: custom:button-card
                       color: auto
                       entity: vacuum.roborock
-                      size: 25%
+                      size: 30%
                       icon: mdi:pause
                       show_name: false
                       styles:
@@ -870,7 +870,21 @@
                     - type: custom:button-card
                       color: auto
                       entity: vacuum.roborock
-                      size: 25%
+                      size: 30%
+                      icon: mdi:stop
+                      show_name: false
+                      styles:
+                        icon:
+                          - color: var(--primary-text-color)
+                      tap_action:
+                        action: call-service
+                        service: vacuum.stop
+                        service_data:
+                          entity_id: vacuum.roborock
+                    - type: custom:button-card
+                      color: auto
+                      entity: vacuum.roborock
+                      size: 30%
                       icon: mdi:broom
                       show_name: false
                       styles:
@@ -884,7 +898,7 @@
                     - type: custom:button-card
                       color: auto
                       entity: vacuum.roborock
-                      size: 25%
+                      size: 30%
                       icon: mdi:map-marker
                       show_name: false
                       styles:
@@ -898,7 +912,7 @@
                     - type: custom:button-card
                       color: auto
                       entity: vacuum.roborock
-                      size: 25%
+                      size: 30%
                       icon: mdi:home-map-marker
                       show_name: false
                       styles:
@@ -934,7 +948,7 @@
               font-family: Helvetica;
               letter-spacing: '-0.01em';
             }
-        - type: markdown  # Lights, plants and settings
+        - type: markdown  # Lights, plants, vacuum and alarm
           content: |
             **Lights, plants and settings**
           style: |
@@ -960,7 +974,7 @@
               styles:
                 card:
                   - width: 5px
-                  - height: 80px
+                  - height: 60px
             - type: 'custom:button-card'  # Lights
               icon: 'mdi:lightbulb'
               show_icon: true
@@ -990,8 +1004,8 @@
                 }
               styles:
                 card:
-                  - width: 5px
-                  - height: 80px
+                  - width: 2px
+                  - height: 60px
             - type: 'custom:button-card'  # Blinds
               icon: 'mdi:window-closed'
               show_icon: true
@@ -1021,8 +1035,8 @@
                 }
               styles:
                 card:
-                  - width: 5px
-                  - height: 80px
+                  - width: 2px
+                  - height: 60px
             - type: 'custom:button-card'  # Plants
               icon: 'mdi:sprout'
               show_icon: true
@@ -1052,10 +1066,10 @@
                 }
               styles:
                 card:
-                  - width: 5px
-                  - height: 80px
-            - type: 'custom:button-card'  # Settings
-              icon: 'mdi:settings'
+                  - width: 2px
+                  - height: 60px
+            - type: 'custom:button-card'  # Vacuum
+              icon: 'mdi:robot-vacuum'
               show_icon: true
               show_name: false
               style: |
@@ -1072,7 +1086,38 @@
                   - color: var(--primary-text-color)
               tap_action:
                 action: navigate
-                navigation_path: /lovelace/settings
+                navigation_path: /lovelace/vacuum
+            - type: 'custom:button-card'  # Spacer
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 2px
+                  - height: 60px
+            - type: 'custom:button-card'  # Alarm
+              icon: 'mdi:alarm'
+              show_icon: true
+              show_name: false
+              style: |
+                ha-card {
+                  box-shadow: var(--softui-standard-boxshadow);
+                }
+              styles:
+                card:
+                  - width: 55px
+                  - height: 55px
+                  - border-radius: 15px
+                  - background-color: var(--primary-background-color)
+                icon:
+                  - color: var(--primary-text-color)
+              tap_action:
+                action: navigate
+                navigation_path: /lovelace/alarm
         - type: 'custom:button-card'  # Spacer
           show_icon: false
           show_name: false
