--- a/config/ui-lovelace.yaml
+++ b/config/ui-lovelace.yaml
@@ -13,11 +13,12 @@ custom_header:
   tab_indicator_color: var(--primary-text-color);
   hide_tabs:
     - plants
-    - settings
+    - alarm
+    - vacuum
 
 x-vacuum-buttons: &vacuum-buttons
   color: auto
-  entity: vacuum.robovac
+  entity: vacuum.roborock
   size: 25%
 
 # background: center / cover repeat-y url("/local/background/dark-wp.jpg") fixed
