improve dust bin emptying automation dust bin emptying counter shouldn't be reset unless the robot is returning to the dock.

--- a/config/automation/vacuuum_automations.yaml
+++ b/config/automation/vacuuum_automations.yaml
@@ -106,6 +106,7 @@
         command: 'go_to'
         params:
           'spot_id': 'Kitchen bin'
+    - wait_template: "{{ is_state(trigger.entity_id, 'returning') }}"
     - service: counter.reset
       data:
         entity_id: counter.vacuum_dustbin
