--- a/config/integrations/plant.yaml
+++ b/config/integrations/plant.yaml
@@ -3,14 +3,12 @@
 
 Yucca aloifolia:
   sensors:
-    moisture: sensor.yuccaaloifolia_moisture
-    battery: sensor.yuccaaloifolia_battery
-    temperature: sensor.yuccaaloifolia_temperature
-    conductivity: sensor.yuccaaloifolia_conductivity
-    brightness: sensor.yuccaaloifolia_light
+    moisture: sensor.yucca_aloifolia_moisture
+    temperature: sensor.yucca_aloifolia_temperature
+    conductivity: sensor.yucca_aloifolia_soil_conductivity
+    brightness: sensor.yucca_aloifolia_illuminance
   min_moisture: 15
   max_moisture: 60
-  min_battery: 20
   min_conductivity: 350
   max_conductivity: 2000
   min_temperature: 8
