--- a/config/sensor/mqtt.yaml
+++ b/config/sensor/mqtt.yaml
@@ -116,3 +116,9 @@
   json_attributes_topic: "valetudo/roborock/map_data"
   name: valetudo_map
   value_template: 'OK'
+
+- platform: mqtt
+  name: version_valetudo
+  state_topic: "homeassistant/vacuum/valetudo_XXXXXX/config"
+  value_template: "{{ value_json.device['sw_version'] }}"
+  scan_interval: 21600
