--- a/config/sensor/template.yaml
+++ b/config/sensor/template.yaml
@@ -88,3 +88,10 @@
     lights_on:
       entity_id: sensor.time
       value_template: "{{ states.light | selectattr('state', 'equalto', 'on') | rejectattr('attributes.is_deconz_group') | list | length }}"
+    esp32_living_room_uptime:
+      entity_id: sensor.esp32_living_room_uptime_raw
+      value_template: "{{ ((states('sensor.esp32_living_room_uptime_raw') | float) / 60 / 60) | round(2) }}"
+      unit_of_measurement: "h"
+    esp32_living_room_version:
+      entity_id: sensor.esp32_living_room_version_raw
+      value_template: "{{ states('sensor.esp32_living_room_version_raw').split(' ',1)[0] }}"
