--- a/config/lovelace/views/05-IoT.yaml
+++ b/config/lovelace/views/05-IoT.yaml
@@ -320,3 +320,84 @@
                 card:
                   - width: 5px
                   - height: 10px
+        - type: markdown
+          content: |
+            ### ESP32 - living room
+          style: |
+            ha-card {
+              height: 50px;
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
+              font-size: 20px;
+              font-weight: bold;
+              font-family: Helvetica;
+              letter-spacing: '-0.01em';
+            }
+        - type: horizontal-stack
+          cards:
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
+            - type: custom:stack-in-card
+              mode: vertical
+              style: |
+                ha-card {
+                  background-color: var(--primary-background-color);
+                  border-radius: 15px;
+                  box-shadow: var(--softui-standard-boxshadow);
+                }
+              cards:
+                - type: glance
+                  # title: wemosd1 - 1
+                  entities:
+                    - entity: sensor.esp32_living_room_version
+                      name: Version
+                      icon: mdi:alpha-v-box
+                    - entity: sensor.esp32_living_room_ip_address
+                      name: IP
+                      icon: mdi:map-marker
+                    - entity: sensor.esp32_living_room_uptime
+                      name: Uptime
+                      icon: mdi:arrow-up-thick
+                    - entity: sensor.esp32_living_room_wifi_signal_sensor
+                      name: RSSI
+                      icon: mdi:signal-variant
+                # - type: entities
+                #   show_header_toggle: false
+                #   entities:
+                #     - type: custom:fold-entity-row
+                #       head:
+                #         type: section
+                #         label: Scripts
+                #       entities:
+                #         - entity: script.tasmota_status_wemosd1_1
+                #           name: Status
+                #         - entity: script.tasmota_fwstatus_wemosd1_1
+                #           name: FW-Status
+                #         - entity: script.tasmota_restart_wemosd1_1
+                #           name: Neustart
+                #         - entity: script.tasmota_reset_wemosd1_1
+                #           name: Reset
+                #         - entity: script.tasmota_upgrade_wemosd1_1
+                #           name: Upgrade
+            - type: 'custom:button-card'
+              show_icon: false
+              show_name: false
+              style: |
+                ha-card {
+                  --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+                  box-shadow: 2px 2px rgba(0,0,0,0.0);
+                }
+              styles:
+                card:
+                  - width: 5px
+                  - height: 10px
