--- a/config/automation/vacuuum_automations.yaml
+++ b/config/automation/vacuuum_automations.yaml
@@ -106,7 +106,7 @@
         command: 'go_to'
         params:
           'spot_id': 'Kitchen bin'
-    - wait_template: "{{ is_state(trigger.entity_id, 'returning') }}"
+    - wait_template: "{{ is_state('vacuum.roborock', 'returning') }}"
     - service: counter.reset
       data:
         entity_id: counter.vacuum_dustbin
