fix channel name for bravia-tv

--- a/config/customization/customize/media_player.yaml
+++ b/config/customization/customize/media_player.yaml
@@ -18,7 +18,7 @@ media_player.sony_bravia_tv:
     - 'RTL II'
     - 'kabel eins HD'
     - 'VOX'
-    - 'ATV II HD'
+    - 'ATV2 HD'
     - 'kabel eins Doku'
     - 'arte HD'
     - 'N24 doku'
