remove owa in yaml configuration since it's not UI only

--- a/.not_secrets.yaml
+++ b/.not_secrets.yaml
@@ -3,6 +3,7 @@
 
 device1: device_tracker.device_1
 device2: device_tracker.device_2
+device3: device_tracker.device_3
 dnsip_hostname: example.domain.com
 favicon: '/local/blub.png'
 hass_config_lat: 17.140005
@@ -21,7 +22,6 @@ mqtt_user: username
 mysql_db: mysql://user:password@example.domain.com/database?charset=utf8
 name_1: jim
 notify_ios: notify.some_phone
-owm_ak: top1secretapikey
 path_fail2ban: /tmp/fail2ban.log
 person_1: person.jim
 person_1_id: jim
