--- a/config/lovelace/views/08-vacuum.yaml
+++ b/config/lovelace/views/08-vacuum.yaml
@@ -290,21 +290,25 @@
                   name: Main brush
                   attribute: mainBrush
                   suffix: h
+                  icon: mdi:progress-wrench
                 - type: attribute
                   entity: vacuum.roborock
                   name: Side brush
                   attribute: sideBrush
                   suffix: h
+                  icon: mdi:progress-wrench
                 - type: attribute
                   entity: vacuum.roborock
                   name: Filter
                   attribute: filter
                   suffix: h
+                  icon: mdi:progress-wrench
                 - type: attribute
                   entity: vacuum.roborock
                   name: Sensor
                   attribute: sensor
                   suffix: h
+                  icon: mdi:progress-clock
               style: |
                 ha-card {
                   --ha-card-background: 'rgba(11, 11, 11, 0.00)';
