--- a/config/lovelace/views/04-server.yaml
+++ b/config/lovelace/views/04-server.yaml
@@ -325,7 +325,7 @@
                 card:
                   - width: 5px
                   - height: 60px
-    - type: vertical-stack  # left column
+    - type: vertical-stack  # middle column
       cards:
         - type: markdown  ### column
           content: |
@@ -437,79 +437,12 @@
               entities:
                 - entity: sensor.dns_lookup
                   name: Public IP
-                - entity: sensor.speedtest_ping
-                  name: Ping
                 - entity: sensor.asuswrt_download
                   name: Download
                   icon: mdi:download
                 - entity: sensor.asuswrt_upload
                   name: Upload
                   icon: mdi:upload
-              style: |
-                ha-card {
-                  background-color: var(--primary-background-color);
-                  border-radius: 15px;
-                  box-shadow: var(--softui-standard-boxshadow);
-                }
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 60px
-        - type: 'custom:button-card'
-          show_icon: false
-          show_name: false
-          style: |
-            ha-card {
-              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-              box-shadow: 2px 2px rgba(0,0,0,0.0);
-            }
-          styles:
-            card:
-              - width: 5px
-              - height: 10px
-        - type: horizontal-stack
-          cards:
-            - type: 'custom:button-card'
-              show_icon: false
-              show_name: false
-              style: |
-                ha-card {
-                --ha-card-background: 'rgba(11, 11, 11, 0.00)';
-                box-shadow: 2px 2px rgba(0,0,0,0.0);
-                }
-              styles:
-                card:
-                  - width: 5px
-                  - height: 60px
-            - type: custom:mini-graph-card
-              name: Speedtest
-              # line_color: "#4169E1"
-              font_size: 55
-              align_state: left
-              hours_to_show: 24
-              points_per_hour: 2
-              entities:
-                - entity: sensor.speedtest_download
-                  show_state: true
-                  color: "#88e615"
-                  # color_thresholds:
-                  #   - value: 0
-                  #     color: red
-                  #   - value: 239
-                  #     color: orange"
-                  #   - value: 240
-                  #     color: "#ffd981"
-                - entity: sensor.speedtest_upload
-                  show_state: true
-                  color: "#ffd981"
               style: |
                 ha-card {
                   background-color: var(--primary-background-color);
