--- a/config/automation/other_automations.yaml
+++ b/config/automation/other_automations.yaml
@@ -6,6 +6,10 @@
   trigger:
     - platform: time
       at: '07:00:00'
+    - platform: state
+      entity_id: !secret device3
+      to: 'home'
+      for: '00:30:00'
   condition:
     condition: and
     conditions:
@@ -28,6 +32,10 @@
   trigger:
     - platform: time
       at: '19:00:00'
+    - platform: state
+      entity_id: !secret device3
+      to: 'not_home'
+      for: '00:30:00'
   action:
     - service: switch.turn_off
       data:
