--- a/config/lovelace/views/05-IoT.yaml
+++ b/config/lovelace/views/05-IoT.yaml
@@ -346,7 +346,7 @@
               styles:
                 card:
                   - width: 5px
-                  - height: 10px
+                  - height: 60px
             - type: custom:stack-in-card
               mode: vertical
               style: |
@@ -382,4 +382,16 @@
               styles:
                 card:
                   - width: 5px
-                  - height: 10px
+                  - height: 60px
+        - type: 'custom:button-card'  # Spacer
+          show_icon: false
+          show_name: false
+          style: |
+            ha-card {
+              --ha-card-background: 'rgba(11, 11, 11, 0.00)';
+              box-shadow: 2px 2px rgba(0,0,0,0.0);
+            }
+          styles:
+            card:
+              - width: 5px
+              - height: 10px
