--- a/config/themes/home_light.yaml
+++ b/config/themes/home_light.yaml
@@ -73,3 +73,71 @@ home_light:
   # valetudo-map
   # valetudo-map-floor-color: "#E3E3E3"
   # valetudo-map-wall-color: var(--accent-color)
+  card-mod-theme: home_light
+  card-mod-root-yaml: |
+
+    ha-app-layout$: |
+        /* This corrects top padding for the view. */
+        #contentContainer {
+          padding-top: 48px !important;
+        }
+
+    paper-tabs$: |
+        /* This hides tab scroll arrows, remove next 3 lines if you want them. */
+        paper-icon-button {
+          display: none;
+        }
+        /* This makes it so arrows are only displayed when needed. */
+        .not-visible {
+          display: none;
+        }
+    .: |
+      /* This shifts the unused portion of the header up. */
+      app-toolbar:not([class="edit-mode"]) {
+        margin-top: -64px;
+        z-index: 1;
+      }
+      /* This shifts the menu button back down. */
+      app-toolbar:not([class="edit-mode"]) ha-button-menu {
+        margin-top: 110px
+      }
+      /* This shifts the voice button back down. */
+      app-toolbar:not([class="edit-mode"]) mwc-icon-button[label] {
+        /* Uncomment line below to hide voice button. */
+        display: none;
+        margin-top: 110px
+      }
+      /* This shifts the options button back down. */
+      app-toolbar:not([class="edit-mode"]) ha-menu-button {
+        /* Uncomment line below to hide options button. */
+        /* display: none; */
+        margin-top: 110px
+      }
+      /* This hides the menu button when sidebar is open. */
+      menu-button[style="visibility: hidden;"] {
+        display: none;
+      }
+      /* This adds room for the menu button when sidebar is open. */
+      :host-context(home-assistant-main[expanded]) paper-tabs {
+        margin-left: 60px !important;
+      }
+      /* This leaves space for the buttons on the right of the tabs bar.
+         Change 112px to 56px if you don't use voice icon. */
+      paper-tabs {
+          --paper-tabs-selection-bar-color: var(--primary-text-color) !important;
+          margin-right: 56px !important;
+      }
+      /* This corrects the sizing of the view. */
+      #view {
+        min-height: calc(100vh - 48px) !important;
+      }
+      @media (orientation: portrait) {
+        /* Hide sidebar button and keep room for the overflow menu button */
+        paper-tabs {
+          margin-left: 52px !important;
+          margin-right: 48px !important;
+        }
+        app-toolbar {
+          padding: 0 2px;
+        }
+      }
