--- a/config/customization/customize/media_player.yaml
+++ b/config/customization/customize/media_player.yaml
@@ -37,12 +37,10 @@ media_player.sony_bravia_tv:
     - 'Sky 1 HD'
     - 'Sky Sport Austria 1 HD'
     - 'Sky Sport Austria 2 HD'
-    - 'Sky Sport Austria 3 HD'
-    - 'Sky Sport Austria 4 HD'
     - 'Sky Sport HD 1'
     - 'Sky Sport HD 2'
-    - 'Sky Sport HD 3'
-    - 'Sky Sport HD 4'
+    - 'Sky Bundesliga HD 1'
+    - 'Sky Bundesliga HD 2'
     - 'Netflix'
     - 'YouTube'
     - 'Prime Video'
