update TV channel list

--- a/config/customization/customize/media_player.yaml
+++ b/config/customization/customize/media_player.yaml
@@ -13,16 +13,17 @@ media_player.sony_bravia_tv:
     - 'ZDF HD'
     - 'ORF III HD'
     - 'ProSieben HD'
-    - 'RTL'
+    - 'RTL HD'
     - 'SAT.1 HD'
-    - 'RTL II'
-    - 'kabel eins HD'
-    - 'VOX'
+    - 'RTLZWEI HD'
+    - 'Kabel Eins HD'
+    - 'VOX HD'
     - 'ATV2 HD'
-    - 'kabel eins Doku'
+    - 'Kabel Eins Doku'
     - 'arte HD'
+    - 'Nitro HD'
     - 'N24 doku'
-    - 'ntv'
+    - 'n-tv HD'
     - 'Comedy Central HD'
     - 'PULS24 HD'
     - 'ZDF neo HD'
