--- a/config/lovelace/views/01-home.yaml
+++ b/config/lovelace/views/01-home.yaml
@@ -11,7 +11,7 @@
             ### Home
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -166,7 +166,7 @@
             ### Scenes
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -232,7 +232,7 @@
                         ### TV
                       style: |
                         ha-card {
-                          height: 20px;
+                          height: 20px !important;
                           --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                           box-shadow: 2px 2px rgba(0,0,0,0.0);
                           font-size: 20px;
@@ -307,7 +307,7 @@
                         ### Gaming
                       style: |
                         ha-card {
-                          height: 20px;
+                          height: 20px !important;
                           --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                           box-shadow: 2px 2px rgba(0,0,0,0.0);
                           font-size: 20px;
@@ -382,7 +382,7 @@
                         ### Bright
                       style: |
                         ha-card {
-                          height: 20px;
+                          height: 20px !important;
                           --ha-card-background: 'rgba(11, 11, 11, 0.00)';
                           box-shadow: 2px 2px rgba(0,0,0,0.0);
                           font-size: 20px;
@@ -409,7 +409,7 @@
             ### Lights
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -674,7 +674,7 @@
             ### Devices
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -940,7 +940,7 @@
             ### Miscellaneous
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
