--- a/config/lovelace/views/03-blinds.yaml
+++ b/config/lovelace/views/03-blinds.yaml
@@ -12,7 +12,7 @@
             ### Living room
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -201,7 +201,7 @@
             ### Bed room
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -390,7 +390,7 @@
             ### Settings
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
