--- a/config/lovelace/views/04-server.yaml
+++ b/config/lovelace/views/04-server.yaml
@@ -11,7 +11,7 @@
             ### Server
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -332,7 +332,7 @@
             ### Database
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -397,7 +397,7 @@
             ### Network
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -468,7 +468,7 @@
             ### Fail2Ban
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -534,7 +534,7 @@
             ### Home-Assistant
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
