--- a/config/lovelace/views/06-plants.yaml
+++ b/config/lovelace/views/06-plants.yaml
@@ -13,7 +13,7 @@
             ### Plants
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
