--- a/config/lovelace/views/08-vacuum.yaml
+++ b/config/lovelace/views/08-vacuum.yaml
@@ -13,7 +13,7 @@
             ### Roborock
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -179,7 +179,7 @@
             ### Map
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -247,7 +247,7 @@
             ### Maintenance
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
@@ -333,7 +333,7 @@
             ### Schedule
           style: |
             ha-card {
-              height: 20px;
+              height: 20px !important;
               --ha-card-background: 'rgba(11, 11, 11, 0.00)';
               box-shadow: 2px 2px rgba(0,0,0,0.0);
               font-size: 20px;
