--- a/config/lovelace/views/01-home.yaml
+++ b/config/lovelace/views/01-home.yaml
@@ -760,6 +760,7 @@
             - type: custom:mini-media-player  # ps4
               entity: media_player.playstation_4
               source: icon
+              toggle_power: false
               hide:
                 volume: true
                 play_pause: true
