--- a/config/themes/grey_night.yaml
+++ b/config/themes/grey_night.yaml
@@ -6,6 +6,7 @@ grey_night:
   accent-color: "hsl(var(--huesat) 30%)"
   base-hue: "220"
   base-sat: "5%"
+  header-height: "44px"
   card-background-color: "var(--paper-card-background-color)"
   dark-divider-opacity: "0"
   dark-primary-color: "hsl(var(--huesat) 60%)"
