--- a/config/themes/home_light.yaml
+++ b/config/themes/home_light.yaml
@@ -2,6 +2,7 @@ home_light:
   # Header:
   app-header-background-color: "#F8F8F8"
   app-header-text-color: "#424242"
+  header-height: "44px"
   # Main Interface Colors
   primary-color: "#5F9BEA"
   light-primary-color: var(--primary-color)
