--- a/config/script/scripts.yaml
+++ b/config/script/scripts.yaml
@@ -17,6 +17,8 @@ wakeup_schlafzimmer:
 magic_mirror_shutdown:
   sequence:
     - service: shell_command.shutdown_rpi
+    - wait_template: "{{ is_state('binary_sensor.raspberry_pi', 'off') }}"
+      timeout: '00:10:00'
     - delay: 00:01:30
     - service: switch.turn_off
       data:
