--- a/config/lovelace/views/04-server.yaml
+++ b/config/lovelace/views/04-server.yaml
@@ -279,6 +279,7 @@
                   name: lv - /srv
                 - entity: sensor.disk_use_percent_sda1
                 - entity: sensor.disk_use_percent_sda2
+                - entity: sensor.disk_use_percent_sdb1
               height: 22px
               width: 70%
               severity:
