--- a/config/sensor/mqtt.yaml
+++ b/config/sensor/mqtt.yaml
@@ -101,6 +101,17 @@
     {% endif %}
 
 - platform: mqtt
+  name: disk_use_percent_sdb1
+  state_topic: 'telegraf/intelnuc/disk'
+  unit_of_measurement: '%'
+  value_template: >-
+    {% if value_json['tags'].device == 'sdb1' %}
+      {{ (value_json['fields'].used_percent | float) | round(2) }}
+    {% else %}
+      {{ states('sensor.disk_use_percent_sdb1') }}
+    {% endif %}
+
+- platform: mqtt
   name: CPU Temperature
   state_topic: 'telegraf/intelnuc/temp'
   unit_of_measurement: '°C'
